--- a/app/src/main/res/layout/activity_salle.xml
+++ b/app/src/main/res/layout/activity_salle.xml
@@ -59,30 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/colorPrimary"
-                android:layout_marginTop="@dimen/dim1"
-                android:paddingTop="@dimen/half_dim"
-                android:layout_alignParentStart="true">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Mes Salles préférés :"
-                    android:textSize="@dimen/text_size_major"
-                    android:textStyle="bold"/>
-                <ListView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/listPref"
-                    android:background="@color/white"
-                    android:layout_margin="@dimen/dim1"></ListView>
 
-
-            </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
@@ -105,6 +82,18 @@
                     android:background="@color/white"
                     android:layout_margin="@dimen/dim1"></ListView>
             </LinearLayout>
+
+            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <fragment
+                    android:name="com.example.ali2nat.v1.Salle.ListeSalleFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    </fragment>
+
+            </FrameLayout>
         </LinearLayout>
 
     </LinearLayout>
