--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,10 +21,10 @@
             android:icon="@drawable/ic_menu_salles"
             android:title="Mes Salles (activity)"/>
 
-        <!--<item
+        <item
             android:id="@+id/nav_prof_act"
             android:icon="@drawable/ic_menu_planning"
-            android:title="Mon profil (activity)"/>-->
+            android:title="Mon profil (activity)"/>
 
     </group>
 
