--- a/app/src/main/res/layout/activity_salle.xml
+++ b/app/src/main/res/layout/activity_salle.xml
@@ -62,32 +62,26 @@
 
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_marginTop="@dimen/dim1"
-                android:paddingTop="@dimen/half_dim"
-                android:background="@color/colorPrimary">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Mes Salles chaudes dans ma rÃ©gion :"
-                    android:textSize="@dimen/text_size_major"
-                    android:textStyle="bold"/>
-                <ListView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/listSallePref"
-                    android:background="@color/white"
-                    android:layout_margin="@dimen/dim1"></ListView>
+                android:orientation="vertical"
+                android:id="@+id/llSallePref">
+
+                <!-- <fragment android:name="com.example.ali2nat.v1.Salle.SalleListeFragment"
+                     android:id="@+id/list"
+
+                     android:layout_width="match_parent"
+
+                     android:layout_height="match_parent" />-->
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:id="@+id/list">
+                android:id="@+id/llSalleRech">
 
                 <!-- <fragment android:name="com.example.ali2nat.v1.Salle.SalleListeFragment"
                      android:id="@+id/list"
