--- a/app/src/main/res/layout/activity_salle.xml
+++ b/app/src/main/res/layout/activity_salle.xml
@@ -9,50 +9,10 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:id="@+id/linearLayout">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_margin="@dimen/dim1"
-                android:background="#ffffff">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="SÃ©lectionner des salles :"
-                    android:id="@+id/tVSelecSalles"
-                    />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dim4"
-                    android:inputType="textPostalAddress"
-                    android:ems="10"
-                    android:id="@+id/editText"
-                    android:layout_gravity="right" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Rayon :"
-                    android:id="@+id/tVRayon"
-                    android:paddingTop="@dimen/dim1"/>
-
-                <SeekBar
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/seekBarSalles" />
-            </LinearLayout>
-        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -75,6 +35,48 @@
 
                      android:layout_height="match_parent" />-->
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_margin="@dimen/dim1"
+                android:background="@color/fond"
+                android:padding="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Faire une recherche :"
+
+                    android:id="@+id/tVSelecSalles"
+                    android:textStyle="bold"
+                    android:layout_gravity="center" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dim4"
+                    android:inputType="textPostalAddress"
+                    android:ems="10"
+                    android:id="@+id/editText"
+                    android:layout_gravity="right" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Rayon :"
+                    android:id="@+id/tVRayon"
+                    android:paddingTop="@dimen/dim1"/>
+
+                <SeekBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/seekBarSalles" />
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
