--- a/app/src/main/res/layout/fragment_salle_liste.xml
+++ b/app/src/main/res/layout/fragment_salle_liste.xml
@@ -10,12 +10,13 @@
         android:layout_weight="1"
         android:layout_marginTop="@dimen/dim1"
         android:paddingTop="@dimen/half_dim"
-        android:background="@color/colorPrimary">
+        android:background="@color/fond">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvTitre"
             android:text="Mes Salles chaudes dans ma région :"
+            android:layout_gravity="center"
             android:textSize="@dimen/text_size_major"
             android:textStyle="bold"/>
         <ListView
@@ -23,6 +24,8 @@
             android:layout_height="match_parent"
             android:id="@+id/listSalle"
             android:background="@color/fond"
-            android:layout_margin="@dimen/dim1"></ListView>
+            android:layout_margin="@dimen/dim1"
+            android:focusable="true"
+            android:listSelector="@color/bleu_claire"></ListView>
     </LinearLayout>
 </LinearLayout>
