FUSION + CLICK ON LIST

--- a/app/src/main/res/layout/fragment_planning.xml
+++ b/app/src/main/res/layout/fragment_planning.xml
@@ -5,7 +5,15 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="@dimen/dim6">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/SemaineSuivante"
+        android:text="Semaine suivante"
+        android:onClick="SemaineSuiv"
+        android:layout_alignParentRight="true"/>
     <com.alamkanak.weekview.WeekView
+        android:layout_marginTop="40dp"
     android:id="@+id/weekView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
