--- a/app/src/main/res/layout/activity_salle.xml
+++ b/app/src/main/res/layout/activity_salle.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.ali2nat.v1.SalleActivity">
+    tools:context=".Salle.SalleActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -22,7 +22,7 @@
 
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="500dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical"
@@ -79,7 +79,7 @@
 
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="500dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical"
