--- a/app/src/main/res/layout/fragment_salles.xml
+++ b/app/src/main/res/layout/fragment_salles.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/dim6"
-    tools:context="com.example.ali2nat.v1.SalleActivity"
+    tools:context=".Salle.SalleActivity"
     >
 
     <LinearLayout
