--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
     android:orientation="vertical"
-    android:background="#3945A7">
+    android:background="@color/colorPrimary">
     <LinearLayout
         android:layout_width="350dp"
         android:layout_height="300dp"
@@ -64,9 +64,11 @@
         android:layout_width="wrap_content"
         android:onClick="login"
         android:text="Login"
+            style="@style/btnStyleShakespeare"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="36dp" />
+        android:layout_marginBottom="36dp"
+            />
         </RelativeLayout>
 
 
