--- a/app/src/main/res/layout/activity_splash_layout.xml
+++ b/app/src/main/res/layout/activity_splash_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3945A7">
+    android:background="@color/colorPrimary">
     <com.example.ali2nat.v1.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/splash_image"
