--- a/app/src/main/res/layout/fragment_planning.xml
+++ b/app/src/main/res/layout/fragment_planning.xml
@@ -4,19 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="@dimen/dim6">
+        android:paddingTop="@dimen/dim6">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/SemaineSuivante"
         android:text="Semaine suivante"
         android:onClick="SemaineSuiv"
+
+        style="@style/btnStyleShakespeare"
+
         android:layout_alignParentRight="true"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/SemainePrecedente"
         android:text="Semaine précedente"
+
+        style="@style/btnStyleShakespeare"
         android:layout_alignParentLeft="true"/>
     <com.alamkanak.weekview.WeekView
         android:layout_marginTop="40dp"
