--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -50,8 +50,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_size_middle"
+                    android:textSize="@dimen/dim2"
                     android:text="Nom de l'intervenant"
+                    android:textStyle="bold"
+                    android:textColor="#ffffff"
                     android:id="@+id/tvNom" />
 
                 <TextView
@@ -59,13 +61,16 @@
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/text_size_middle"
                     android:text="Adresse de l'intervenant"
+
                     android:id="@+id/tvAdresse" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_size_middle"
                     android:text="Type de l'intervenant"
+                    android:textSize="@dimen/dim2"
+                    android:textColor="#ffffff"
+                    android:textStyle="italic"
                     android:id="@+id/tvType" />
             </LinearLayout>
         </LinearLayout>
