--- a/app/src/main/res/layout/activity_salle.xml
+++ b/app/src/main/res/layout/activity_salle.xml
@@ -43,7 +43,7 @@
                 android:orientation="vertical"
                 android:layout_margin="@dimen/dim1"
                 android:background="@color/fond"
-                android:padding="20dp">
+                >
 
                 <TextView
                     android:layout_width="match_parent"
@@ -53,14 +53,15 @@
                     android:background="@drawable/border_titre"
                     android:id="@+id/tVSelecSalles"
                     android:textStyle="bold"
-                    android:paddingLeft="@dimen/dim3"
-                    
+
+                    android:textAlignment="center"
                     android:layout_gravity="center" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dim4"
                     android:inputType="textPostalAddress"
+                    android:layout_margin="@dimen/dim2"
                     android:ems="10"
                     android:id="@+id/editText"
                     android:layout_gravity="right" />
@@ -71,11 +72,13 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="Rayon :"
                     android:id="@+id/tVRayon"
+                    android:textAlignment="center"
                     android:paddingTop="@dimen/dim1"/>
 
                 <SeekBar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dim2"
                     android:id="@+id/seekBarSalles" />
             </LinearLayout>
 
