--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -9,6 +9,7 @@
     android:paddingRight="@dimen/dim2"
     android:paddingTop="@dimen/dim6"
     android:background="@color/fond"
+    android:id="@+id/fragment_profil"
     tools:context="com.example.ali2nat.v1.ProfilActivity">
 
     <LinearLayout
@@ -31,7 +32,7 @@
 
             <com.example.ali2nat.v1.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/profile_image"
+                android:id="@+id/profile_image_fragment"
                 android:layout_width="@dimen/image_circle_profil"
                 android:layout_height="@dimen/image_circle_profil"
                 android:src="@drawable/profile"
