Marker de base + zoom + fct latlong

--- a/app/src/main/res/layout/activity_salle.xml
+++ b/app/src/main/res/layout/activity_salle.xml
@@ -91,13 +91,11 @@
 
 
 
-                <LinearLayout
+                <fragment
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/llMap"
-                    android:orientation="horizontal">
-
-                </LinearLayout>
+                    android:id="@+id/map"
+                    class="com.google.android.gms.maps.SupportMapFragment"/>
             </LinearLayout>
 
 
