--- a/app/src/main/res/layout/dialog_ajout.xml
+++ b/app/src/main/res/layout/dialog_ajout.xml
@@ -19,7 +19,8 @@
     <TimePicker
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/timePicker">
+        android:id="@+id/timePicker"
+        >
     </TimePicker>
 
     <Button
