--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,6 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
-
+    <item android:id="@+id/logout"
+        android:icon="@drawable/logout"
+        android:title="Logout"
+        android:orderInCategory="100"
+        android:onClick="deconnexion"
+        app:showAsAction="always" />
 
 </menu>
