--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -73,7 +73,79 @@
                     android:textStyle="italic"
                     android:id="@+id/tvType" />
             </LinearLayout>
-        </LinearLayout>
+
+            </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_margin="@dimen/dim1">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/layout_bg2"
+                android:padding="@dimen/dim2"
+                android:layout_margin="@dimen/dim1"
+                >
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="400dp"
+                    android:layout_height="200dp"
+                    android:layout_weight="1"
+                    android:background="@color/yellow"
+                    android:layout_marginRight="20dp"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:text="Nombre d'heure saisies :"
+                        android:textStyle="bold"
+                        android:gravity="center"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:text="128 h "
+                        android:textStyle="normal"/>
+                    </LinearLayout>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="400dp"
+                    android:layout_height="200dp"
+                    android:layout_weight="1"
+                    android:background="@color/yellow"
+                    android:layout_marginLeft="20dp"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:text="Nombre de salle favorites"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:text="2"
+                        android:textStyle="normal"/>
+
+                </LinearLayout>
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
 
 
 
