--- a/app/src/main/res/layout/dialog_ajout.xml
+++ b/app/src/main/res/layout/dialog_ajout.xml
@@ -19,8 +19,8 @@
         />
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="60dp">
-        
+        android:layout_height="60dp"
+        android:entries="@array/day_array">
     </ListView>
 
     <TimePicker
